MLFLow Integration Completed

--- a/notebooks/04_modeling_trainer.ipynb
+++ b/notebooks/04_modeling_trainer.ipynb
@@ -251,8 +251,8 @@
     "        early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
     "        autoencoder.fit(\n",
     "            X_train_scaled, X_train_scaled,\n",
-    "            epochs=400,  # Increase epochs if necessary\n",
-    "            batch_size=256,\n",
+    "            epochs=self.config.params_epochs,  # Increase epochs if necessary\n",
+    "            batch_size=self.config.params_batch_size,\n",
     "            shuffle=True,\n",
     "            validation_data=(X_val_scaled, X_val_scaled),\n",
     "            callbacks=[early_stopping],\n",
